--- a/index.html
+++ b/index.html
@@ -46,6 +46,22 @@
                         <input type="text" placeholder="1/10/2010" id="datetime" />
                     </li>
                     <li class="bg-dark list-group-item">
+                        <label for="date">Enter City</label>
+                        <input type="text" placeholder="city" id="city" />
+                    </li>
+                    <li class="bg-dark list-group-item">
+                        <label for="state">Enter State</label>
+                        <input type="text" placeholder="e.g ca " id="state" />
+                    </li>
+                    <li class="bg-dark list-group-item">
+                        <label for="country">Enter Country</label>
+                        <input type="text" placeholder="us" id="country" />
+                    </li>
+                    <li class="bg-dark list-group-item">
+                        <label for="shape">Enter Shape</label>
+                        <input type="text" placeholder="e.g. circle" id="shape" />
+                    </li>
+                    <li class="bg-dark list-group-item">
                         <button id="filter-btn" type="button" class="btn btn-dark bg-dark">
                          Filter Table
                         </button>
